maven-archetype-plugin added

--- a/PluginManagement/pom.xml
+++ b/PluginManagement/pom.xml
@@ -142,6 +142,12 @@
 						</execution>
 					</executions>
 				</plugin>
+				
+				
+				<plugin>
+					<artifactId>maven-archetype-plugin</artifactId>
+					<version>3.0.1</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
