--- a/PluginManagement/pom.xml
+++ b/PluginManagement/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
@@ -11,9 +13,10 @@
 	<packaging>pom</packaging>
 	<name>PluginManagement</name>
 	<url>http://github.com/nleva/${project.artifactId}</url>
-	
+
 	<properties>
-		<gwtVersion>2.8.1</gwtVersion>
+		<gwtVersion>2.8.2</gwtVersion>
+		<version.thorntail>2.2.0.Final</version.thorntail>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,8 +27,41 @@
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-war-plugin</artifactId>
+					<artifactId>maven-resources-plugin</artifactId>
 					<version>3.1.0</version>
+					<executions>
+						<execution>
+							<id>copy-resources</id>
+							<phase>generate-resources</phase>
+							<goals>
+								<goal>copy-resources</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>target/classes/</outputDirectory>
+								<resources>
+									<resource>
+										<directory>${basedir}/src/main/resources/</directory>
+										<filtering>true</filtering>
+										<includes>
+											<include>**</include>
+										</includes>
+									</resource>
+									<resource>
+										<directory>${project.build.directory}/generated-sources/delombok/</directory>
+										<filtering>true</filtering>
+										<includes>
+											<include>**</include>
+										</includes>
+									</resource>
+								</resources>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>3.2.2</version>
 					<configuration>
 						<failOnMissingWebXml>false</failOnMissingWebXml>
 					</configuration>
@@ -33,7 +69,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.0.1</version>
+					<version>3.1.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -43,12 +79,12 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.0.2</version>
+					<version>3.1.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-ejb-plugin</artifactId>
-					<version>2.5.1</version>
+					<version>3.0.1</version>
 					<configuration>
 						<ejbVersion>3.2</ejbVersion>
 					</configuration>
@@ -57,7 +93,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.6.1</version>
+					<version>3.8.0</version>
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
@@ -66,16 +102,17 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-ear-plugin</artifactId>
-					<version>2.10.1</version>
+					<version>3.0.1</version>
 					<configuration>
-						<version>7</version>
+						<version>8</version>
 						<defaultLibBundleDir>lib</defaultLibBundleDir>
 					</configuration>
 				</plugin>
+				
 				<plugin>
 					<groupId>org.projectlombok</groupId>
 					<artifactId>lombok-maven-plugin</artifactId>
-					<version>1.16.18.1</version>
+					<version>1.18.0.0</version>
 					<executions>
 						<execution>
 							<phase>generate-sources</phase>
@@ -107,6 +144,20 @@
 				</plugin>
 
 				<plugin>
+					<groupId>io.thorntail</groupId>
+					<artifactId>thorntail-maven-plugin</artifactId>
+					<version>${version.thorntail}</version>
+
+					<executions>
+						<execution>
+							<goals>
+								<goal>package</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.5.3</version>
@@ -131,7 +182,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.10.4</version>
+					<version>3.0.1</version>
 					<executions>
 						<execution>
 							<id>attach-javadocs</id>
@@ -142,8 +193,8 @@
 						</execution>
 					</executions>
 				</plugin>
-				
-				
+
+
 				<plugin>
 					<artifactId>maven-archetype-plugin</artifactId>
 					<version>3.0.1</version>
@@ -166,14 +217,14 @@
 		<developerConnection>scm:git:https://github.com/nleva/${project.artifactId}.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
-	
+
 	<developers>
 		<developer>
 			<id>nleva</id>
 			<name>Lev Nadeinsky</name>
 			<email>n.lev.a@ya.ru</email>
-			<timezone>+4</timezone>
+			<timezone>+3</timezone>
 		</developer>
 	</developers>
-	
+
 </project>
