--- a/PluginManagement/pom.xml
+++ b/PluginManagement/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
@@ -8,7 +6,7 @@
 		<version>9</version>
 	</parent>
 	<groupId>ru.send-to.versionManagement</groupId>
-	<version>0.4-SNAPSHOT</version>
+	<version>0.4</version>
 	<artifactId>PluginManagement</artifactId>
 	<packaging>pom</packaging>
 	<name>PluginManagement</name>
@@ -215,7 +213,7 @@
 		<url>https://github.com/nleva/${project.artifactId}</url>
 		<connection>scm:git:https://github.com/nleva/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:https://github.com/nleva/${project.artifactId}.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>PluginManagement-0.4</tag>
 	</scm>
 
 	<developers>
